feat: return old code

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@moralisweb3/common-evm-utils": "^2.25.1",
+    "frames.js": "^0.8.1",
     "frog": "latest",
     "hono": "^4",
     "moralis": "^2.25.1",
