--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@moralisweb3/common-evm-utils": "^2.25.1",
     "frames.js": "^0.8.1",
-    "frog": "latest",
+    "frog": "^0.5.5",
     "hono": "^4",
     "moralis": "^2.25.1",
     "next": "14.1.0",
