--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "moralis": "^2.25.1",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "viem": "^2.8.0"
   },
   "devDependencies": {
     "@types/node": "^20",
